--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -39,7 +39,7 @@
     }
 
     .color-mapa{
-        background-color: #25343F;
+        background-color: #20d24d;
         color: white;
     }
     .map-responsive{
@@ -55,7 +55,15 @@
         position:absolute;
     }
 
-
+    .div-contact-form{
+        border-radius: 0px 20px 0px 20px;
+        -moz-border-radius: 0px 20px 0px 20px;
+        -webkit-border-radius: 0px 20px 0px 20px;
+        border: 1px solid #e4e2e2;
+        -webkit-box-shadow: 10px 10px 9px -7px rgba(0,0,0,0.75);
+        -moz-box-shadow: 10px 10px 9px -7px rgba(0,0,0,0.75);
+        box-shadow: 10px 10px 9px -7px rgba(0,0,0,0.75);
+    }
 
 {%endblock%}
 </style>
