--- a/src/templates/breadcrumb.html
+++ b/src/templates/breadcrumb.html
@@ -1,19 +1,74 @@
+{%load static%}
 <style>
     {% block style %}
 
-        .breadcrumb {Background: rgba(0,0,0,.7); color: rgba(243,243,243,.8); border: 0px solid rgba(255, 255, 255, 1); border-radius: 25px; display: block; height: 33px;}
-        .breadcrumb>li+li:before {color: rgba(204, 204, 204, 1); content: "\00a0";}
+@import url(https://fonts.googleapis.com/css?family=Fjalla+One);
 
+* {
+  margin: 0;
+  padding: 0;
+}
+#menu {
+  margin: 1em;
+}
+#menu ul {
+  list-style-type: none;
+}
+#menu li {
+  display: block;
+}
+.btn-menu {
+  background-color: #e9e9e9;
+  /*color: blue;*/
+  display: block;
+  /*font-family: 'Fjalla One', sans-serif;*/
+  /*font-size: 1em;*/
+  margin: 0 0 .125em 0;
+  padding: .5em 0;
+  text-align: center;
+  text-decoration: none;
+}
+.btn-menu:hover {
+  background-color: #20d24d;
+  color: white;
+}
+
+@media (min-width: 50em) {
+  #menu li {
+    float: left;
+    width: 50%;
+  }
+  .btn-menu {
+    margin-right: .125em;
+  }
+}
+
+@media (min-width: 40em) {
+  #menu li {
+    display: inline-block;
+    width: 25%;
+  }
+}
+
+@media (min-width: 48em) {
+  #menu li {
+    max-width: 13em;
+  }
+}
     {% endblock style %}
 </style>
-<body>
-    <div class="col-md-12">
-        <div class="col-md-10 col-md-offset-1">
-            <ol class="breadcrumb">
-                <li><a class="my-color-text"href="">Inicio</a></li>
-                <li><a class="my-color-text"href="">Categorías</a></li>
-                <li class="active my-color-text">Diseño Web</li>
-            </ol>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12">
+            <nav id="menu">
+                <ul>
+                    {% for obj in object_clasificacion %}
+                        <li><a href="{% url 'start:filtro' filtro=obj.categoria %}" class="btn-menu" title="Go to homepage"><strong>{{ obj.categoria }}</strong></a></li>
+                    {% endfor %}
+                </ul>
+            </nav>
         </div>
     </div>
-</body>
+</div>
+
+
