--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,38 +1,45 @@
 {%block content%}
+{% load static %}
 {% load filtro_tag %}
 <style>
   {%block style%}
 
     body {
-    min-height:inherit;
-    padding-top: 50px;
-  }
-
-  .navbar-inverse .navbar-nav>li>a {
-    color: #c7c7c7;
+        min-height:inherit;
+        padding-top: 50px;
     }
-  .navbar-inverse .navbar-brand {
-    background: #b11e1e;
-    color: #c7c7c7;
-}
-  .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
-    color: #fff;
-    /*background-color: #337ab7;*/
-    background-color: #b11e1e;
-    background: #b11e1e;
-}
+    .navbar-inverse .navbar-nav>li>a
+    {
+        color:#777;
+    }
+
+    .navbar-inverse .navbar-toggle .icon-bar {
+        background-color: black;
+    }
+    .navbar-brand {
+        background: #4CAF50;
+        color: white;
+        padding: 0px;
+    }
+    .navbar-brand>img {
+        height: 100%;
+        width: auto;
+    }
   .navbar {
-     Background: rgba(1,2,1,0.9);
-     Color: rgba(1,1,1,1);
-     border-color: transparent;
-  }
+      background: rgba(255,255,255, 1);
+      border-color: #e3e3e3;
+    }
+    .navbar-inverse .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus
+    {
+        background: #20d24d;
+        color:white;
+    }
 
-.navbar-inverse .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    background: #b11e1e;
-    color:white;
-}
 
-
+/*.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus {*/
+    /*color: #fff;*/
+    /*background-color: #28d828;;*/
+/*}*/
 
 {%endblock style%}
 </style>
@@ -46,14 +53,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand">EICOM</a>
+                <a href="/" class="navbar-brand"><img id="" class="" src="{% static 'img/eicombrand.jpg' %} " alt=""/></a>
             </div>
-
         <!-- Menú -->
-            <div class="collapse navbar-collapse navbar-right" id="navegacion-ns">
+            <div class="collapse navbar-collapse" id="navegacion-ns">
                 <ul class="nav navbar-nav">
-                    <li><a href="/">Inicio</a></li>
-                    <li class="dropdown">
+                    <li class=""><a href="/">Inicio</a></li>
+                    <li class="dropdown li-activo">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
                         Categorías <span class="caret"></span>
                     </a>
@@ -68,33 +74,21 @@
                         {% endif %}
                     </ul>
                     </li>
+
+                    <li><a href="{% url 'start:contact' %}">Contáctanos</a></li>
                     <li><a href="{% url 'start:about' %}">Acerca de nosotros</a></li>
-                    <li><a href="{% url 'start:contact' %}">Contacto</a></li>
-                    {% if request.user.is_authenticated %}
-                    <!--<li><a href="{% url 'auth_logout' %}">Salir</a></li>-->
-                    <!--{% else %}-->
-                    <!--<li><a href="{% url 'registration_register' %}">Registrarse</a></li>-->
-                    <!--{% endif %}-->
-                    <!--{% if not request.user.is_authenticated and not "/accounts/login" in request.get_full_path %}-->
-
-                    <!--<li><a href="{% url 'auth_login' %}">Iniciar sesión</a></li>-->
-                    <!--{% endif %}-->
-
                 </ul>
-                <!-- Búsqueda -->
-                {% if "/" in request.get_full_path%}
-                    <form id="searchform" action="" class="navbar-form navbar-right " role="search" method="get">
-                        <div class="input-group">
-                            <input type="text" name="q" class="form-control" placeholder="buscar aquí..." value="{{ request.GET.q }}">
-                            <span class="input-group-btn">
-                                <button class="btn btn-danger" type="submit"> <i class="fa fa-search" aria-hidden="true"></i></button>
-                                <!--<input class="btn btn-primary" type="submit" value="">-->
-                            </span>
-                        </div>
-                    </form>
-                {% endif%}
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+
+                    <!--<li><a href="{% url 'start:about' %}">Acerca de nosotros</a></li>-->
+                    <!--<li><a href="{% url 'start:contact' %}">Contacto</a></li>-->
+                </ul>
             </div>
         </div>
     </nav>
 </body>
 {%endblock content%}
+
+
