--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,7 +19,7 @@
 </script>
     <title>eicom</title>
 </head>
-<body class="body-base">
+<body>
     {% include 'navbar.html' %}
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
