--- a/src/templates/breadcrumb.html
+++ b/src/templates/breadcrumb.html
@@ -29,7 +29,7 @@
   text-decoration: none;
 }
 .btn-menu:hover {
-  background-color: #20d24d;
+  background-color: #92d14f;
   color: white;
 }
 
@@ -57,7 +57,7 @@
 }
     {% endblock style %}
 </style>
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="col-sm-12">
             <nav id="menu">
