--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -9,81 +9,61 @@
   }
   .foto img{
     width:100%;
-    max-height: 450px;
+    max-height: 400px;
   }
 
-  .foto p{
+  .foto h1{
     position:absolute;
-    bottom:20px;
+    bottom:200px;
     width:100%;
     text-align:center;
     color:rgba(243,243,243,.8);
     font-family:Verdana;
-    font-size:18px;
+    /*font-size:18px;*/
     font-style: italic;
     background-color:rgba(0,0,0,.7);
     padding:.5em 0;
   }
+.body-about{
+  background-image: url("../static/img/fondoeicom.jpg")!important;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: black;
+  min-height: 100%;
+}
+
+.text-justified {
+    text-align: justify;
+}
+/**/
   {% endblock %}
 </style>
 
-<body>
-<!-- Título -->
-<div class="foto">
-  <img  class="responsive" src="{% static 'img/about2.jpg' %}" alt="foto">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, dolorum.</p>
-</div>
-<div class="container col-md-12">
-  <!--Columnas de texto-->
-  <!--Bloque Quiénes somos-->
-  <div class=" col-md-4">
-    <div class="col-xs-12 col-sm-6 col-md-12 format-text-center">
-      <article class="post clearfix">
-        <h2 class="post-title my-texto">
-          <a href="#">¿Quiénes somos?</a>
-        </h2>
-        <a href="#" class="thumb">
-          <img src="{% static 'img/nosotros2.jpg' %}" alt="" class="img-thumbnail">
-        </a>
-        <p class="post-contenido text-justify"><br>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolorem labore impedit blanditiis quaerat fugiat odio eligendi velit optio deserunt sapiente, qui pariatur quis veniam voluptatibus rerum minus voluptate odit.
-        </p>
-      </article>
+<body class="body-about">
+{% include 'social.html' %}
+
+    <div class=" foto">
+        <img  class="responsive" src="{% static 'img/about2.jpg' %}" alt="foto">
+        <h1>¿QUIÉNES SOMOS?</h1>
     </div>
-  </div>
-  <!--Bloque Misión-->
-  <div class="container col-md-4">
-    <div class="col-xs-12 col-sm-6 col-md-12 format-text-center">
-      <article class="post clearfix">
-        <h2 class="post-title my-texto">
-          <a href="#">Misión</a>
-        </h2>
-        <a href="#" class="thumb">
-          <img src="{% static 'img/mision3.jpg' %}" alt="" class="img-thumbnail">
-        </a>
-        <p class="post-contenido text-justify"><br>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolorem labore impedit blanditiis quaerat fugiat odio eligendi velit optio deserunt sapiente, qui pariatur quis veniam voluptatibus rerum minus voluptate odit.
-        </p>
-      </article>
+
+            <div class="col-md-8 col-md-offset-2">
+                <article>
+                    <div class="page-header">
+                        <h2 class="post-title">QUIÉNES SOMOS?</h2>
+                        <p class="post-contenido text-justify" style="font-size: 25px;"><br>
+                        Somos una empresa joven, pero con experiencia de ventas de equipo de computo,venta de accesorios, instalación de redes,
+                        consumibles, mantenimiento preventivo, mantenimiento correctivos y más….
+                    </p>
+                    </div>
+                </article>
+            </div>
+
+    <div class="col-md-10 col-md-offset-1">
+        <img src="{% static 'img/misva.png' %}" alt="" class="img-responsive">
     </div>
-  </div>
-  <!--Bloque Visión-->
-  <div class="container col-md-4">
-    <div class="col-xs-12 col-sm-6 col-md-12 format-text-center">
-      <article class="post clearfix">
-        <h2 class="post-title my-texto">
-          <a href="#">Visión</a>
-        </h2>
-        <a href="#" class="thumb">
-          <img src="{% static 'img/vision2.jpg' %}" alt="" class="img-thumbnail">
-        </a>
-        <p class="post-contenido text-justify"><br>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolorem labore impedit blanditiis quaerat fugiat odio eligendi velit optio deserunt sapiente, qui pariatur quis veniam voluptatibus rerum minus voluptate odit.
-        </p>
-      </article>
-    </div>
-  </div>
-</div>
-{% include 'social_footer.html'%}
+
 </body>
 {%endblock%}
