--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,27 +1,129 @@
 {% load static %}
 <style>
     {% block style %}
-        .color-footer-index {
-            height: 50px;
-            padding-top: 0.5cm;
-            background: #20d24d;
-            padding-bottom: 0.5cm;
+        .color-bg{
+            /*background: #363636;*/
+            padding-top: 0.7cm;
         }
-        .text-color-footer{
-            color: white;
-        }
+    .color-social {
+        background-image: url("../static/img/fondoeicom.jpg")!important;
+        /*background-repeat: no-repeat;*/
+        background-position: center center;
+        background-attachment: fixed;
+        background-size: cover;
+        background-color: black;
+        min-height: 100%;
+
+
+        /*background: #121212;*/
+        height: 2cm;
+        padding-top: 0.6cm;
+        text-align: center;
+    }
+    .color-facebook {
+        color:#4267b2;
+    }
+    .color-youtube {
+        color:#c4302b;
+    }
+    .color-twitter {
+        color:#1b95e0;
+    }
+    .color-instagram {
+        color:black;
+    }
+
+    .hr-footer{
+        /*background: #e8351c;*/
+        margin-top: 10px;
+        margin-bottom: 10px;
+        border: 0;
+        border-top: 0.5px solid #535454;
+    }
+    .Puntos{
+        color: #535454;
+    }
+    p{
+       color: #535454;
+    }
+    a {
+        color: #535454;
+    }
+    a:link {
+        text-decoration:none;
+
+    }
+    .texto-footer {
+        text-align: center;
+    }
+    .img-footer {
+        height: 50px;
+        width: auto;
+    }
+
     {% endblock style %}
 </style>
 
-<footer>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12 color-footer-index">
-                    <a href="{% url 'start:contact' %}" class="text-color-footer"> <i class="fa fa-address-card" aria-hidden="true"></i> Contacto |</a>
-                    <a href="{% url 'start:about' %}" class="text-color-footer"> <i class="fa fa-handshake-o" aria-hidden="true"></i> Acerca de nosotros |</a>
-                    <a href="/" class="pull-right text-color-footer">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2017 eicom.com</a>
-                </div>
-            </div>
-        </div>
-</footer>
+	<footer id="footer" class="footer color-bg">
+		<div class="footer-bottom">
+			<div class="container">
+				<div class="row">
+                    <div class="hidden-xs hidden-sm col-md-4">
+                        <ul>
+                            <li>
+                                <a title="Nosotros" href="{% url 'start:about' %}"> NOSOTROS</a></i>
+                                <hr class="hr-footer">
+                            </li>
+                            <li>
+                                <a href="#"> BLOG</a></i>
+                                <hr class="hr-footer">
+                            </li>
+                            <li>
+                                <a href="{% url 'start:contact' %}"> CONTACTO</a></i>
+                                <hr class="hr-footer">
+                            </li>
+                            <li>
+                                <a href="#"> POLÍTICA DE GARANTÍA</a></i>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 texto-footer">
+                        <a title="EICOM" href="http://eicom.pythonanywhere.com/"><img class="img-responsive center-block img-footer" src="{% static 'img/logofinaleicom.png' %}" alt="" /></a>						<br>
+						<span class="bottom-legend">
+							EICOM © 2017
+                            <br>
+							Desarrollado por <b><a title="NavaSoft & Jogimbo" target="_blank" href="/">NavaSoft & Jogimbo</a></b>.
+						</span>
+                    </div>
+                    <div class="col-md-4">
+                        <div class=" texto-footer">
+                            <p><i class="fa fa-map-marker marker circle-gray"></i> Avenida Benjamín Flores y Calle 30 (local verde)
+                            San Luis Río Colorado, Cp 123456
+                            Sonora, México</p>
+                            <p><i class="fa fa-phone phone circle-gray"></i> 518 1519 / 653 1067262</p>
+                            <p><i class="fa fa-envelope-o envelope circle-gray"></i> eicom.pythonanywhere.com</p>
+                        </div><!-- media-body -->
+                    </div>
+				</div><!-- row -->
+			</div><!-- container -->
+		</div><!-- footer-bottom -->
+        <br>
+        <!--<div class="col-md-12 color-social">-->
+            <!--<div class="col-xs-3">-->
+                <!--<a title="Facebook" class="color-facebook" target="_blank" href="https://www.facebook.com/EICOM/">-->
+                    <!--<i class="fa fa-facebook fa-2x" aria-hidden="true"></i>-->
+                <!--</a>-->
+            <!--</div>-->
+            <!--<div class="col-xs-3">-->
+                <!--<a title="Youtube" class="color-youtube" target="_blank" href="#"><i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a>-->
+            <!--</div>-->
+            <!--<div class="col-xs-3">-->
+                <!--<a title="Twitter" class="color-twitter" target="_blank" href="#"><i class="fa fa-twitter fa-2x"></i></a>-->
+            <!--</div>-->
+            <!--<div class="col-xs-3">-->
+                <!--<a title="Instagram" class="color-instagram" target="_blank" href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>-->
+            <!--</div>-->
+        <!--</div>-->
+            {% include 'social_footer.html'%}
+	</footer>
 
