--- a/src/templates/searchbox.html
+++ b/src/templates/searchbox.html
@@ -5,14 +5,14 @@
         /*background: #4CAF50;*/
         height: 100px;
         /*text-align: center;*/
-        padding-top: 28px;
+        padding-top: 23px;
     }
 .form-search{
     margin: 0 auto;
     text-align: center;
 
     font: bold 13px sans-serif;
-     max-width: 70%;
+     max-width: 100%;
     position: relative;
 }
 
@@ -34,7 +34,7 @@
 .form-search button{
     border-bottom-right-radius: 2px;
     border-top-right-radius: 2px;
-    background-color:  #20d24d;
+    background-color:  #92d14f;
     box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.08);
     color: #ffffff;
     padding: 15px 22px;
@@ -54,7 +54,7 @@
     {% endblock style %}
     </style>
 
-<div class="col-md-12 div-searchbox">
+<div class="container-fluid div-searchbox">
     <form class="form-search" ole="search" method="get">
         <input type="search" name="q" placeholder="Quiero buscar..." value="{{ request.GET.q }}">
         <button type="submit">Buscar</button>
