--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -24,7 +24,7 @@
     }
   .navbar {
 
-        background-image: url("../static/img/fondoeicom.jpg")!important;
+        background-image: url("/static/img/fondoeicom.jpg")!important;
         background-repeat: no-repeat;
         background-position: center center;
         background-attachment: fixed;
@@ -105,5 +105,3 @@
     </nav>
 </body>
 {%endblock content%}
-
-
